[gd_scene load_steps=11 format=3 uid="uid://cxyr57tbkwcup"]

[ext_resource type="PackedScene" uid="uid://cq6cufn4fk6s3" path="res://Data/Units/Unit.tscn" id="1"]
[ext_resource type="Script" path="res://Data/Units/Player/Player.gd" id="2"]
[ext_resource type="Script" path="res://Data/Units/Player/ExperienceBar.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bvyw2arekg3an" path="res://Assets/art/icons/medieval-fantasy/lorc/barbute.svg" id="5"]
[ext_resource type="PackedScene" uid="uid://c8u150t7o10vg" path="res://Data/Particles/Reward/WaterfallStarParticle.tscn" id="5_r1e13"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hm36x"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bij8g"]
bg_color = Color(0.411765, 0.564706, 0.403922, 1)

[sub_resource type="Gradient" id="2"]
offsets = PackedFloat32Array(0.00862069, 0.146552, 0.840517, 1)
colors = PackedColorArray(0.992157, 1, 0.913725, 0, 0.992157, 1, 0.913725, 0.666667, 0.992157, 1, 0.913725, 0.666667, 0.992157, 1, 0.913725, 0)

[sub_resource type="GradientTexture2D" id="3"]
gradient = SubResource("2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_puee3"]
emission_shape = 3
emission_box_extents = Vector3(450, 1, 1)
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 20, 0)
scale_min = 0.05
scale_max = 0.1
color = Color(0.835294, 1, 0.882353, 1)
color_ramp = SubResource("3")

[node name="Player" groups=["player"] instance=ExtResource("1")]
script = ExtResource("2")

[node name="PlayerCamera" type="Camera2D" parent="." index="0"]

[node name="Sprite2D" parent="." index="2"]
self_modulate = Color(1, 1, 1, 1)
texture = ExtResource("5")

[node name="CanvasLayer" type="CanvasLayer" parent="." index="5"]

[node name="ItemContainer" type="HBoxContainer" parent="CanvasLayer" index="0"]
offset_left = 46.0
offset_top = 532.0
offset_right = 912.0
offset_bottom = 627.0

[node name="ExperienceBar" type="ProgressBar" parent="CanvasLayer" index="1"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -446.0
offset_top = -37.0
offset_right = 446.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_hm36x")
theme_override_styles/fill = SubResource("StyleBoxFlat_bij8g")
show_percentage = false
script = ExtResource("3")

[node name="LevelUpParticles" parent="CanvasLayer/ExperienceBar" index="0" instance=ExtResource("5_r1e13")]
position = Vector2(450, 3)
emitting = false
process_material = SubResource("ParticleProcessMaterial_puee3")
one_shot = true
